# SimpleCore-in-C

./: CMakeLists.txt  README.md  factorial.asm
docs/: calling_convention.md  schematic.txt
include/: alu.h  assembler.h  bus.h  cpu.h  io.h  isa.h  memory.h
programs/: fibonacci.asm  hello.asm  timer.asm
src/: alu.c  assembler.c  bus.c  cpu.c  io.c  main.c  memory.c
